# image_compressor

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
src/: compressor.rs  crawler.rs  dir.rs  lib.rs
