[package]
name = "image_compressor"
author = ["Kim tae hyeon <kimth0734@gmail.com>"]
description = "A image compressing module using mozjpeg, and image crates."
version = "1.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/altair823/image_compressor"

[dependencies]
image = "0.24.1"
mozjpeg = "0.9.2"
crossbeam-queue = "0.3.5"

[dev-dependencies]
fs_extra = "1.2.0"