[package]
name = "image_compressor"
authors = ["Kim tae hyeon <dlsrks0734@gmail.com>"]
description = "A image compressing module using mozjpeg, and image crates."
version = "1.5.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/altair823/image_compressor"

[dependencies]
image = "0.25.1"
mozjpeg = "0.10.7"
crossbeam-queue = "0.3.11"
rand = "0.8.5"

[dev-dependencies]
colorgrad = "0.6.2"
fs_extra = "1.3.0"
